New features + Forge port