@@ -1,11 +1,16 @@
 package namelessju.audioimprovements.common.mixins;
 
 import namelessju.audioimprovements.common.AudioImprovements;
+import namelessju.audioimprovements.common.ConfigImpl;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.resources.sounds.SoundInstance;
 import net.minecraft.client.sounds.MusicInfo;
 import net.minecraft.client.sounds.MusicManager;
 import net.minecraft.client.sounds.SoundManager;
+import net.minecraft.sounds.Music;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.util.Mth;
+import net.minecraft.util.RandomSource;
 import org.jetbrains.annotations.Nullable;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
@@ -15,16 +20,11 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 @Mixin(MusicManager.class)
-public class MusicManagerMixin
+public abstract class MusicManagerMixin
 {
-    @Unique
-    private static final float audioImprovements$FADE_IN_SPEED = 1f/80f;
-    @Unique
-    private static final float audioImprovements$FADE_OUT_SPEED = 1f/40f;
-    
-    
     @Shadow @Final
     private Minecraft minecraft;
     @Shadow @Nullable
@@ -42,16 +42,19 @@ public class MusicManagerMixin
         
         AudioImprovements mod = AudioImprovements.getInstance();
         float newVolumeMultiplier = 1f;
-        if (this.minecraft.level != null
-            && mod.config.preventMusicClash.value)
+        if (this.minecraft.player != null)
         {
-            float targetMultiplier = mod.isMusicDiscPlayingNearby() ? 0f : 1f;
-            newVolumeMultiplier = audioImprovements$volumeMultiplier
-                + Math.clamp(
-                    targetMultiplier - audioImprovements$volumeMultiplier,
-                    -audioImprovements$FADE_OUT_SPEED,
-                    audioImprovements$FADE_IN_SPEED
-                );
+            float targetMultiplier = mod.shouldFadeMusic() ? 0f : 1f;
+            if (targetMultiplier != audioImprovements$volumeMultiplier)
+            {
+                ConfigImpl config = AudioImprovements.getInstance().config;
+                float volumeChange = targetMultiplier - audioImprovements$volumeMultiplier;
+                volumeChange
+                    = volumeChange > 0f ? Math.min(volumeChange, 1f/Math.max(config.musicFadeInSeconds.getValue() * 20, 1))
+                    : Math.max(volumeChange, -1f/Math.max(config.musicFadeOutSeconds.getValue() * 20, 1));
+                newVolumeMultiplier = audioImprovements$volumeMultiplier + volumeChange;
+            }
+            else newVolumeMultiplier = targetMultiplier;
         }
         
         if (newVolumeMultiplier != audioImprovements$volumeMultiplier)
@@ -90,6 +93,34 @@ public class MusicManagerMixin
         if (AudioImprovements.LOGGER.isDebugEnabled())
         {
             AudioImprovements.LOGGER.debug("Set music currentGain to {} (base: {}, multiplier: {})", this.currentGain * audioImprovements$volumeMultiplier, this.currentGain, this.audioImprovements$volumeMultiplier);
+        }
+    }
+    
+    
+    @Mixin(MusicManager.MusicFrequency.class)
+    public static abstract class MusicFrequencyMixin
+    {
+        @Inject(method = "getNextSongDelay", at = @At("HEAD"), cancellable = true)
+        private void audioImprovements$getNextSongDelay(Music music, RandomSource randomSource, CallbackInfoReturnable<Integer> cir)
+        {
+            ConfigImpl config = AudioImprovements.getInstance().config;
+            if (config.customMusicFrequency.isEnabled)
+            {
+                if (music != null)
+                {
+                    if (music.event().value() == SoundEvents.MUSIC_MENU.value()
+                        && !config.musicFrequencyAffectMenu.isEnabled)
+                    {
+                        return;
+                    }
+                }
+                
+                cir.setReturnValue(Mth.nextInt(randomSource,
+                    config.musicFrequencyMinTicks.getValue(),
+                    config.musicFrequencyMaxTicks.getValue()
+                ));
+                cir.cancel();
+            }
         }
     }
 }
